@Ruben - Updated the activity entity to new refined response with detail